fix form serialization and remove table gap

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -35,6 +35,10 @@
 
 /* general classes */
 
+.remove-gap {
+    margin-bottom: 0pt;
+}
+
 .t-left {
     text-align: left;
 }
